--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -5,10 +5,15 @@
       <img src="images/images/cup-smal.png" alt="cup" class="cup">
     </div>
     <div class="about_value">
-      Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – кондитерська фабрика
-      «Чарівна
-      Мозаїка»<br>
-      гарантує високу якість своїх виробів!
+      <p>
+        Фабрика ТМ «Чарівна Мозаїка» кожен день<br>вдосконалює свою майстерність<br> і тому – кондитерська фабрика
+        «Чарівна
+        Мозаїка»<br>
+        гарантує високу якість своїх виробів!
+      </p>
+      <p>
+        Туту Ви зможете перейти за посиланням на мої роботи
+      </p>
     </div>
     <div class="our_project">
       <img src="./images/images/border-video.png" alt="border" class="border_project">
