--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -26,7 +26,7 @@
         </li>
         <li class="project_element">
           <a href="https://evgeniy210191.github.io/ice-cream/">
-            <img src="./images/images/cace7.avif" alt="some">
+            <img src="./images/images/cace1.avif" alt="some">
           </a>
           <p class="sign_project">Ice cream</p>
         </li>
@@ -65,6 +65,12 @@
             <img src="./images/images/cace7.avif" alt="some">
           </a>
           <p class="sign_project">Zooportal</p>
+        </li>
+        <li class="project_element">
+          <a href="https://github.com/evgeniy210191">
+            <img src="./images/images/cace6.avif" alt="some">
+          </a>
+          <p class="sign_project">My gitHub</p>
         </li>
       </ul>
       <button type="button" class="switch_project" data-atribute="prev-switch"></button>
