--- a/src/sass/component/_footer.scss
+++ b/src/sass/component/_footer.scss
@@ -45,6 +45,8 @@ address {
   left: 50%;
   transform: translateX(-50%);
   text-align: left;
+  width: 100%;
+  padding: 0 40px;
 
   a {
     text-decoration: none;
@@ -69,6 +71,7 @@ address {
 }
 
 .contact {
+  width: 100%;
   a {
     display: flex;
     align-items: center;
