--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -12,7 +12,7 @@
         гарантує високу якість своїх виробів!
       </p>
       <p>
-        Туту Ви зможете перейти за посиланням на мої роботи
+        Тут Ви зможете перейти за посиланням на мої роботи
       </p>
     </div>
     <div class="our_project">
