--- a/src/css/style.css
+++ b/src/css/style.css
@@ -625,9 +625,20 @@ footer .container {
   position: relative;
   display: inline-block;
 }
+@media screen and (max-width: 768px) {
+  .address {
+    width: 100%;
+  }
+}
 .address img {
-  margin: auto;
-  height: 300px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .address img {
+    display: block;
+    margin: auto;
+    height: 300px;
+  }
 }
 
 address {
@@ -659,6 +670,7 @@ address ul {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 10px;
+  padding-left: 80px;
 }
 address svg {
   fill: #7d7d7d;
@@ -1084,9 +1096,20 @@ footer .container {
   position: relative;
   display: inline-block;
 }
+@media screen and (max-width: 768px) {
+  .address {
+    width: 100%;
+  }
+}
 .address img {
-  margin: auto;
-  height: 300px;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .address img {
+    display: block;
+    margin: auto;
+    height: 300px;
+  }
 }
 
 address {
@@ -1118,6 +1141,7 @@ address ul {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 10px;
+  padding-left: 80px;
 }
 address svg {
   fill: #7d7d7d;
