--- a/src/sass/component/_footer.scss
+++ b/src/sass/component/_footer.scss
@@ -11,9 +11,9 @@ footer {
     content: '';
     position: absolute;
     top: 50%;
-    left: -10%;
+    left: -0%;
     transform: translateY(-50%);
-    width: calc(50% - 20px);
+    width: calc(40% - 20px);
     height: 2px;
     background: #cdcdcd;
   }
@@ -21,9 +21,9 @@ footer {
     content: '';
     position: absolute;
     top: 50%;
-    right: -10%;
+    right: -0%;
     transform: translateY(-50%);
-    width: calc(50% - 20px);
+    width: calc(40% - 20px);
     height: 2px;
     background: #cdcdcd;
   }
@@ -70,7 +70,9 @@ address {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-left: 80px;
+    @media screen and (min-width: 768px) {
+      padding-left: 80px;
+    }
   }
   svg {
     fill: #7d7d7d;
