--- a/src/partials/ourValue.html
+++ b/src/partials/ourValue.html
@@ -15,6 +15,11 @@
         Тут Ви зможете перейти за посиланням на мої роботи
       </p>
     </div>
+    <div class="show_at_project">
+      <div class="arrow">
+        <h5 class="hidden">Подивись на мої проєкти які знаходяться нижче. Вони сховані під тортами</h5>
+      </div>
+    </div>
     <div class="our_project">
       <img src="./images/images/border-video.png" alt="border" class="border_project">
       <ul class="box_project">
